# oraculo-lol

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: streamlit_app.py
scripts/: __init__.py  agregador.py  oraculo.py  scheduler.py  setup_launchd.py  setup_twitter_session.py  test_publisher.py  test_real.py
src/oraculo_lol/: logging_utils.py  paths.py  runtime.py  settings.py  threads_monitor.py
src/oraculo_lol/agregador/: __init__.py  build_context.py  rosters.py
src/oraculo_lol/datasources/: __init__.py  liquipedia.py  pandascore.py  riot.py
src/oraculo_lol/models/: __init__.py  context.py  postgame.py  rosters.py
src/oraculo_lol/oraculo/: __init__.py  llm.py  postgame_runner.py  prediction.py  prompt.py  runner.py
src/oraculo_lol/publisher/: __init__.py  formatter.py  layout.py  telegram.py  threads.py  twitter.py  twitter_browser.py
tests/: test_formatter.py  test_postgame.py  test_smoke_imports.py
